Update cargo.toml with project metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,8 @@
 name = "rust-collections"
 version = "0.1.0"
 authors = ["Jim D'Angelo", "Funclobile, Inc."]
+description = "Some basic (persistent) collections"
+license-file = "LICENSE"
+repository = "https://github.com/dangeloj/rust-collections"
 
 [dependencies]
