Restructure project to be more "Rusty"
 - Restructure project to have a better module setup.
 - Adde some documentation and documentation tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-collections"
+name = "coll"
 version = "0.1.0"
 authors = ["Jim D'Angelo", "Funclobile, Inc."]
 description = "Some basic (persistent) collections"
